--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,13 @@
     width: 3rem;
     height: 3rem;
 }
+
+.big-circle {
+    width: 60px;
+    height: 60px;
+}
+
+.small-circle {
+    width: 50px;
+    height: 50px;
+}
